--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="pizzaria.py">
-    <script type="text/javascript" src=""></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/py" href="pizzaria.py">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+   <header>
+    <h1>Pizzaria Bytez</h1>
+    <h3> A melhor pizza da regiao </h3>
     
-    <div class="page">
-    <div class="card">
-        <form action=""
-        <h2>Pizzaria Bytez</h2>
-        <p>Digite seus dados para comecar</p>
-        <input class="campo" type="text" placeholder="Digite o tamanho da sua pizza">
-        <input class="campo" type="text" placeholder="Digite a sua bebida">
-        <input type="campo" type="text" placeholder="Digite o sabor da sua pizza">
 
-
+   </header> 
+   
+        
 
 
 
