--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -94,7 +94,7 @@
     <section id="sobre" class="about">
         <h2>Sobre Nós</h2>
         <div class="about-content">
-            <p>Fundada em 1985, a Pizza Delícia mantém a tradição de preparar pizzas artesanais com receitas familiares. Nossa massa é preparada diariamente e nossos ingredientes são selecionados cuidadosamente.</p>
+            <p>Fundada em 2025, a Pizzaria Bytez mantém a tradição de preparar pizzas artesanais com receitas familiares. Nossa massa é preparada diariamente e nossos ingredientes são selecionados cuidadosamente.</p>
             <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Forno a lenha">
         </div>
     </section>
@@ -104,8 +104,8 @@
         <div class="contact-info">
             <div>
                 <h3>Endereço</h3>
-                <p>Rua das Pizzas, 123</p>
-                <p>Centro - Sua Cidade</p>
+                <p>Rua dos Commits, 123</p>
+                <p>Heliópolis - Belo Horizonte</p>
             </div>
             <div>
                 <h3>Horário</h3>
@@ -114,14 +114,14 @@
             </div>
             <div>
                 <h3>Telefone</h3>
-                <p>(11) 1234-5678</p>
-                <p>(11) 98765-4321</p>
+                <p>(31) 2811-2856</p>
+                <p>(31) 98641-6506</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 Pizza Delícia. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Pizzaria Bytez. Todos os direitos reservados.</p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
