--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -55,9 +55,13 @@
                 <select id="sabor-pizza">
                     <option value="">Selecione um sabor</option>
                     <option value="calabresa">Calabresa</option>
-                    <option value="moda">A Moda</option>
-                    <option value="4queijos">4 Queijos</option>
+                    <option value="moda">Quatro Queijos</option>
+                    <option value="Margherita">Margherita</option>
                     <option value="portuguesa">Portuguesa</option>
+                    <option value="Frango com catupiry">Frango com catupiry</option>
+                    <option value="Pepperoni">Pepperoni</option>
+                    <option value="Brigadeiro">Brigadeiro</option>
+                    <option value="Romeu e Julieta">Romeu e Julieta</option>
                 </select>
                 
                 <h3>Escolha o Tamanho</h3>
