--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -16,7 +16,6 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#menu">Menu</a></li>
                 <li><a href="#pedidos">Pedidos</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -36,17 +35,6 @@
         </div>
     </section>
 
-    <section id="menu" class="menu">
-        <h2>Nosso Menu</h2>
-        <div class="menu-filters">
-            <button class="filter-btn active" data-category="all">Todas</button>
-            <button class="filter-btn" data-category="classicas">Clássicas</button>
-            <button class="filter-btn" data-category="especiais">Especiais</button>
-            <button class="filter-btn" data-category="doces">Doces</button>
-        </div>
-        <div class="pizzas-container"></div>
-    </section>
-
     <section id="pedidos" class="pedidos">
         <h2>Faça seu Pedido</h2>
         <div class="pedido-container">
@@ -55,13 +43,13 @@
                 <select id="sabor-pizza">
                     <option value="">Selecione um sabor</option>
                     <option value="calabresa">Calabresa</option>
-                    <option value="moda">Quatro Queijos</option>
-                    <option value="Margherita">Margherita</option>
+                    <option value="4 queijos">Quatro Queijos</option>
+                    <option value="margherita">Margherita</option>
                     <option value="portuguesa">Portuguesa</option>
-                    <option value="Frango com catupiry">Frango com catupiry</option>
-                    <option value="Pepperoni">Pepperoni</option>
-                    <option value="Brigadeiro">Brigadeiro</option>
-                    <option value="Romeu e Julieta">Romeu e Julieta</option>
+                    <option value="frango com catupiry">Frango com catupiry</option>
+                    <option value="pepperoni">Pepperoni</option>
+                    <option value="brigadeiro">Brigadeiro</option>
+                    <option value="romeu e Julieta">Romeu e Julieta</option>
                 </select>
                 
                 <h3>Escolha o Tamanho</h3>
