--- a/front-end/victor/novo novo/html.html
+++ b/front-end/victor/novo novo/html.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="model.css">
-    <title>minha Página</title>
+    <title>Pizzaria Bytez</title>
 </head>
 <body>
     <header>   
-        Pizzaria Meu Nobre
+        Pizzaria Bytez
     </header>
     <h2>
         Acesse nosso catalogo para fazer um pedido:
     </h2>
     <ul>   
-    <li> Pizza de Calabresa</li>
-    <li> Pizza de 4 Queijos</li>
-    <li> Pizza a Moda</li>
-    <li> Pizza Portuguesa</li>
+    <li onclick="Informações('pizza_Calabresa')">Pizza de Calabresa</li>
+    <li onclick="Informações('pizza_4Queijos')">Pizza de 4 Queijos</li>
+    <li onclick="Informações('pizza_Moda')">Pizza a Moda</li>
+    <li onclick="Informações('pizza_Portuguesa')">Pizza Portuguesa</li>
     </ul>
+    <div id="detalhes"></div>
     <footer>
+        &copy; 2025 Pizzaria Bytez. Todos os direitos reservados.
+        <p>Telefone:(31) 2811-285</p>
         <a href="https://www.instagram.com/">Instagram</a>
     </footer>
-    
 </body>
 </html>
